// Copyright Â© 2017 The Things Network Foundation, distributed under the MIT license (see LICENSE file)

syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

package ttn.v3;

option go_package = "github.com/TheThingsNetwork/ttn/pkg/ttnpb";

message ApplicationUplink {
  uint32 f_port = 1;
  uint32 f_cnt = 2;
  bytes frm_payload = 3;
  // TODO: Add Metadata
}

message ApplicationDownlink {
  uint32 f_port = 1;
  uint32 f_cnt = 2;
  bytes frm_payload = 3;
  // TODO: Add "hints" for NS
}

message ApplicationDownlinks {
  repeated ApplicationDownlink downlinks = 1;
}
